--- a/part3/backend/package.json
+++ b/part3/backend/package.json
@@ -5,11 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build:ui": "rm -rf build && cd ../phonebook && npm run build && cp -r build ../backend && rm -r build",
-    "deploy": "fly deploy",
-    "deploy:full": "npm run build:ui && npm run deploy",
-    "logs:prod": "fly logs"
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
