--- a/part3/backend/package.json
+++ b/part3/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build:ui": "rm -rf build && cd ../phonebook && npm run build && mv build ../backend"
   },
   "author": "",
   "license": "ISC",
