--- a/part3/backend/package.json
+++ b/part3/backend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build:ui": "rm -rf build && cd ../phonebook && npm run build && mv build ../backend"
+    "build:ui": "rm -rf build && cd ../phonebook && npm run build && mv build ../backend",
+    "deploy": "fly deploy",
+    "deploy:full": "npm run build:ui && npm run deploy",    
+    "logs:prod": "fly logs"
   },
   "author": "",
   "license": "ISC",
