--- a/part3/backend/package.json
+++ b/part3/backend/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon server.js",
     "build:ui": "rm -rf build && cd ../phonebook && npm run build && mv build ../backend",
     "deploy": "fly deploy",
-    "deploy:full": "npm run build:ui && npm run deploy",    
+    "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs"
   },
   "author": "",
@@ -16,6 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mongoose": "^6.6.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
