--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -4,17 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ."
+    "start": "nodemon .",
+    "test": "jest --verbose"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^29.1.2",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.6.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
