--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production nodemon .",
+    "start:test": "cross-env NODE_ENV=test nodemon .",
     "dev": "cross-env NODE_ENV=development nodemon .",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit"
   },
