Cypress linting hotfix

--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -20,7 +20,6 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "test:e2e": "cypress run"
-
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +45,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "cypress": "^10.10.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "jest-watch-typeahead": "^0.6.5"
   }
 }
