--- a/part6/unicafe-redux/package.json
+++ b/part6/unicafe-redux/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "quick-test": "CI=true npm test -- --verbose"
   },
   "eslintConfig": {
     "extends": [
