--- a/part7/bloglist-frontend/package.json
+++ b/part7/bloglist-frontend/package.json
@@ -16,6 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "eslint": "eslint .",
+    "prettier": "npx prettier --write .",
     "quick-test": "CI=true npm test -- --verbose",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
@@ -46,6 +47,7 @@
     "@testing-library/user-event": "^14.4.3",
     "cypress": "^10.10.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "jest-watch-typeahead": "^0.6.5"
+    "jest-watch-typeahead": "^0.6.5",
+    "prettier": "2.7.1"
   }
 }
