--- a/part7/bloglist/package.json
+++ b/part7/bloglist/package.json
@@ -7,13 +7,15 @@
     "start": "cross-env NODE_ENV=production nodemon .",
     "start:test": "cross-env NODE_ENV=test nodemon .",
     "dev": "cross-env NODE_ENV=development nodemon .",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit",
+    "prettier": "npx prettier --write ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.1.2",
     "nodemon": "^2.0.20",
+    "prettier": "2.7.1",
     "supertest": "^6.2.4"
   },
   "dependencies": {
