--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -11,8 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.10.3",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
-    "uuid": "^9.0.0"
+    "mongoose": "^6.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
