--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -10,11 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^9.0.5",
     "apollo-server": "^3.10.3",
+    "apollo-server-core": "^3.10.3",
+    "apollo-server-express": "^3.10.3",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.11.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.0"
+    "mongoose": "^6.7.0",
+    "ws": "^8.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
