--- a/part9/healthapp/package.json
+++ b/part9/healthapp/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "ts-node": "ts-node",
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts",
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts"
   },
@@ -12,6 +14,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.11.9"
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.9",
+    "ts-node-dev": "^2.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
