--- a/part9/healthapp/package.json
+++ b/part9/healthapp/package.json
@@ -7,6 +7,7 @@
     "ts-node": "ts-node",
     "start": "ts-node index.ts",
     "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts .",
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts"
   },
@@ -16,6 +17,9 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.28.0",
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
