--- a/part9/healthapp/package.json
+++ b/part9/healthapp/package.json
@@ -20,7 +20,9 @@
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "express": "^4.18.2"
