--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,3 +21,9 @@ jobs:
       - name: lint
         working-directory: part11
         run: npm run eslint
+      - name: build
+        working-directory: part11
+        run: npm run build
+      - name: test
+        working-directory: part11
+        run: npm run test
