--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,3 +28,10 @@ jobs:
       - name: test
         working-directory: part11
         run: npm run test
+      - name: e2e tests
+        working-directory: part11
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:5000
