--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,9 +29,9 @@ jobs:
         working-directory: part11
         run: npm run test
       - name: e2e tests
-        working-directory: part11
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v5.2.0
         with:
-          command: npm run test:e2e
+          build: npm run build
           start: npm run start-prod
           wait-on: http://localhost:5000
+        working-directory: part11
