--- a/part11/fly.toml
+++ b/part11/fly.toml
@@ -16,7 +16,7 @@ processes = []
   internal_port = 8080
   processes = ["app"]
   protocol = "tcp"
-  script_checks = []
+
   [services.concurrency]
     hard_limit = 25
     soft_limit = 20
@@ -36,3 +36,10 @@ processes = []
     interval = "15s"
     restart_limit = 0
     timeout = "2s"
+
+  [[services.script_checks]]
+    command       = "/app/health_check.sh"
+    grace_period  = "1s"
+    interval      = "5s"
+    restart_limit = 0
+    timeout       = "2s"
