--- a/.github/workflows/part11.pokedex-pipeline.yml
+++ b/.github/workflows/part11.pokedex-pipeline.yml
@@ -5,12 +5,12 @@ on:
     branches:
       - master
     paths:
-      - part11/**
+      - part11/pokedex/**
   pull_request:
     types: [opened, synchronize]
     branches: [master]
     paths:
-      - part11/**
+      - part11/pokedex/**
 
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
