--- a/.github/workflows/part11.pokedex-pipeline.yml
+++ b/.github/workflows/part11.pokedex-pipeline.yml
@@ -12,9 +12,12 @@ on:
     paths:
       - part11/pokedex/**
 
+defaults:
+  run:
+    working-directory: part11/pokedex
+
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  APP_PATH: part11/pokedex
 
 jobs:
   pokedex_deployment_pipeline:
@@ -25,16 +28,12 @@ jobs:
         with:
           node-version: '16'
       - name: npm install
-        working-directory: $APP_PATH
         run: npm install
       - name: lint
-        working-directory: $APP_PATH
         run: npm run eslint
       - name: build
-        working-directory: $APP_PATH
         run: npm run build
       - name: test
-        working-directory: $APP_PATH
         run: npm run test
       - name: e2e tests
         uses: cypress-io/github-action@v5.0.8
@@ -42,11 +41,10 @@ jobs:
           build: npm run build
           start: npm run start-prod
           wait-on: http://localhost:5000
-          working-directory: $APP_PATH
+          working-directory: part11/pokedex
       - uses: superfly/flyctl-actions/setup-flyctl@master
         if: ${{ github.event_name == 'push' }}
       - name: deploy to fly.io
-        working-directory: $APP_PATH
         if: ${{ github.event_name == 'push' }}
         run: flyctl deploy --remote-only
 
