--- a/.github/workflows/part11.pokedex-pipeline.yml
+++ b/.github/workflows/part11.pokedex-pipeline.yml
@@ -9,8 +9,6 @@ on:
   pull_request:
     types: [opened, synchronize]
     branches: [master]
-    paths:
-      - part11/pokedex/**
 
 defaults:
   run:
@@ -47,6 +45,20 @@ jobs:
       - name: deploy to fly.io
         if: ${{ github.event_name == 'push' }}
         run: flyctl deploy --remote-only
+      - name: Build Success
+        uses: rjstone/discord-webhook-notify@v1
+        if: ${{ success() && github.event_name == 'push' }}
+        with:
+          severity: info
+          description: 'Build succeefull! Latest version live at: https://pokedex-fj.fly.dev/'
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Failure
+        uses: rjstone/discord-webhook-notify@v1
+        if: ${{ failure() }}
+        with:
+          severity: error
+          details: 'Build failed!'
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
   tag_release:
     if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip')}}
