--- a/.github/workflows/part11.pokedex-cron-healthcheck.yml
+++ b/.github/workflows/part11.pokedex-cron-healthcheck.yml
@@ -2,8 +2,11 @@ on:
   schedule:
     - cron: '*/5 * * * *'
 
-steps:
-  - name: Check the deployed service URL
-    uses: jtalk/url-health-check-action@v3
-    with:
-      url: https://pokedex-fj.fly.dev/health
+jobs:
+  periodic-healthcheck:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check the deployed service URL
+        uses: jtalk/url-health-check-action@v3
+        with:
+          url: https://pokedex-fj.fly.dev/health
