--- a/part7/bloglist/package.json
+++ b/part7/bloglist/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production nodemon .",
+    "start": "cross-env NODE_ENV=production node .",
     "start:test": "cross-env NODE_ENV=test nodemon .",
     "dev": "cross-env NODE_ENV=development nodemon .",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit",
