--- a/part7/bloglist-docker-image/Dockerfile
+++ b/part7/bloglist-docker-image/Dockerfile
@@ -1,6 +1,12 @@
 FROM node:18-slim
+ENV NODE_ENV=production
+
+WORKDIR /app
+
+COPY ["package.json", "package-lock.json*", "./"]
+RUN npm install --production
 
 ADD ../bloglist /app
 ADD ../bloglist-frontend/build /app/build
 
-WORKDIR /app
+CMD [ "node", "." ]
