--- a/.github/workflows/part11.bloglist-pipeline.yml
+++ b/.github/workflows/part11.bloglist-pipeline.yml
@@ -46,10 +46,9 @@ jobs:
       - name: e2e test
         uses: cypress-io/github-action@v5.0.8
         with:
-          buid: npm i -D cypress
-          start: npm run start:test
+          start: npm run --prefix ../bloglist start:test
           wait-on: http://localhost:3003
-          working-directory: part7/bloglist
+          working-directory: part7/bloglist-frontend
 
       - name: Log in to Docker Hub
         if: ${{ github.event_name == 'push' }}
