--- a/.github/workflows/part11.bloglist-pipeline.yml
+++ b/.github/workflows/part11.bloglist-pipeline.yml
@@ -61,7 +61,8 @@ jobs:
         if: ${{ github.event_name == 'push' }}
         uses: docker/build-push-action@v4.0.0
         with:
-          context: part7/bloglist-docker-image
+          context: part7
+          file: part7/bloglist-docker-image/Dockerfile
           push: true
           tags: |
             thefenix/bloglist:latest
