--- a/part12/todo-app/todo-frontend/Dockerfile
+++ b/part12/todo-app/todo-frontend/Dockerfile
@@ -4,8 +4,10 @@ WORKDIR /usr/src/app
 COPY . .
 
 ENV REACT_APP_BACKEND_URL http://localhost:3000
+ENV CI=true
 
 RUN npm ci
+RUN npm run test
 RUN npm run build
 
 # This is a new stage, everything before this is gone, except the files we want to COPY
