--- a/part12/todo-app/docker-compose.yml
+++ b/part12/todo-app/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: reverse-proxy
     image: nginx:1.20.1
     volumes:
-      - ./nginx.dev.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - 8080:80
     depends_on:
@@ -13,27 +13,17 @@ services:
 
   app:
     container_name: todo-frontend
-    image: todo-frontend-dev
-    build:
-      context: ./todo-frontend
-      dockerfile: dev.Dockerfile
-    environment:
-      - REACT_APP_BACKEND_URL=http://localhost:8080/api
-    volumes:
-      - ./todo-frontend:/usr/src/app
+    image: todo-frontend
+    build: ./todo-frontend
     ports:
-      - 3000:3000
+      - 3000:80
     depends_on:
       - backend
 
   backend:
     container_name: todo-backend
-    image: todo-backend-dev
-    build:
-      context: ./todo-backend
-      dockerfile: dev.Dockerfile
-    volumes:
-      - ./todo-backend:/usr/src/app
+    image: todo-backend
+    build: ./todo-backend
     ports:
       - 3001:3000
     environment: 
