--- a/part12/todo-app/nginx.dev.conf
+++ b/part12/todo-app/nginx.dev.conf
@@ -9,7 +9,9 @@ http {
     # Requests starting with root (/) are routed to todo-frontend
     location / {
       proxy_http_version 1.1;
-      proxy_pass http://app:80;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_pass http://app:3000;
     }
 
     # Requests starting with /api/ are routed to todo-backend
