--- a/part12/todo-app/todo-frontend/Dockerfile
+++ b/part12/todo-app/todo-frontend/Dockerfile
@@ -3,7 +3,7 @@ FROM node:16 AS build-stage
 WORKDIR /usr/src/app
 COPY . .
 
-ENV REACT_APP_BACKEND_URL http://localhost:3000
+ENV REACT_APP_BACKEND_URL http://localhost:8080/api
 ENV CI=true
 
 RUN npm ci
