--- a/part12/todo-app/docker-compose.dev.yml
+++ b/part12/todo-app/docker-compose.dev.yml
@@ -5,7 +5,7 @@ services:
     container_name: reverse-proxy
     image: nginx:1.20.1
     volumes:
-      - ./nginx.dev.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - 8080:80
     depends_on:
@@ -19,10 +19,11 @@ services:
       dockerfile: dev.Dockerfile
     environment:
       - REACT_APP_BACKEND_URL=http://localhost:8080/api
+      - PORT=80
     volumes:
       - ./todo-frontend:/usr/src/app
     ports:
-      - 3000:3000
+      - 3000:80
     depends_on:
       - backend
 
