--- a/part12/todo-app/nginx.conf
+++ b/part12/todo-app/nginx.conf
@@ -9,6 +9,8 @@ http {
     # Requests starting with root (/) are routed to todo-frontend
     location / {
       proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
       proxy_pass http://app:80;
     }
 
