--- a/part7/bloglist-docker-image/Dockerfile
+++ b/part7/bloglist-docker-image/Dockerfile
@@ -1,3 +1,13 @@
+FROM node:18 AS build-stage
+
+WORKDIR /app
+COPY ./bloglist-frontend /app
+
+ENV CI=true
+
+RUN npm ci
+RUN npm run build
+
 FROM node:18-slim
 ENV NODE_ENV=production
 
@@ -6,7 +16,7 @@ WORKDIR /app
 COPY ["bloglist/package.json", "bloglist/package-lock.json", "./"]
 RUN npm install --production
 
-ADD bloglist /app
-ADD bloglist-frontend/build /app/build
+COPY ./bloglist /app
+COPY --from=build-stage /app/build /app/build
 
 CMD [ "node", "." ]
