--- a/part10/rate-repository-app/package.json
+++ b/part10/rate-repository-app/package.json
@@ -27,6 +27,7 @@
     "@expo/metro-config": "^0.5.2",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-picker/picker": "^2.4.2",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "expo": "~46.0.19",
@@ -38,6 +39,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-paper": "^5.2.0",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-web": "~0.18.7",
     "react-router-native": "^6.8.1",
     "yup": "^1.0.0"
