--- a/part10/rate-repository-app/package.json
+++ b/part10/rate-repository-app/package.json
@@ -40,7 +40,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-paper": "^5.2.0",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-context": "4.3.1",
     "react-native-web": "~0.18.7",
     "react-router-native": "^6.8.1",
     "use-debounce": "^9.0.3",
